--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,2 +1,3 @@
-.github/ @fzyzcjy @yushengsu-thu @Ying1123
+.github/CODEOWNERS @fzyzcjy @Ying1123
+.github/workflows/ @yushengsu-thu
 /miles/ @fzyzcjy @yueming-yuan
